# minirts

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install_apache.sh
data/: download.sh
game/: .gitignore  CMakeLists.txt  compile_cmds.py  pybind.cc
game/ai/: ai.h  ai_factory.cc  ai_factory.h  ai_option.h  cheat_executor_ai.h  cmd_reply.cc  cmd_reply.h  coach_instruction.h  comm_ai.cc  comm_ai.h  dual_extractor.h  executor_extractor.cc  executor_extractor.h  raw2cmd.cc  raw2cmd.h  replay_loader.cc  replay_loader.h  rule_ai.cc  rule_ai.h  rule_extractor.cc  rule_extractor.h  save2json.cc  save2json.h  state_dumper.cc  state_dumper.h  test_ai.h  trainable_ai.h  trainable_executor_ai.h  trainable_rule_ai.h
game/backend/: main_loop.cc
game/engine/: bullet.cc  bullet.h  cmd.cc  cmd.def  cmd.h  cmd_interface.h  cmd_receiver.cc  cmd_receiver.h  cmd_specific.cc  cmd_specific.def  cmd_target.cc  cmd_target.h  cmd_util.cc  cmd_util.h  common.h  const.h  custom_enum.h  game_action.cc  game_action.h  game_base.h  game_env.cc  game_env.h  game_option.h  game_state.cc  game_state.h  game_state_ext.h  game_stats.h  gamedef.h  locality_search.h  map.cc  map.h  mc_rule_actor.cc  mc_rule_actor.h  mc_strategy_actor.cc  mc_strategy_actor.h  player.cc  player.h  pq_extend.h  preload.cc  preload.h  (+12 more)
game/engine/lua/: cpp_interface.cc  cpp_interface.h  lua_interface.cc  lua_interface.h  utils.cc  utils.h
game/frontend/: game.js  minirts.html
game/game_MC/: cmd_specific.cc  cmd_specific.def  gamedef.cc
game/game_MC/lua/: attack_rule_book.lua  cpp_interface.cc  cpp_interface.h  lua_interface.cc  lua_interface.h  map_generator.lua  random.lua  unit_factory.lua  unit_generator.lua
game/utils/: ws_config.h  ws_server.h
game/utils/lua/: common.h  interface.h  state_holder.h
pretrained_models/: download.sh  update_path.py
scripts/: README.md
scripts/behavior_clone/: .gitignore  analyze_match.py  best_models.py  cmd_heads.py  coach_dataset.py  cont_softmax_sampler.py  conv_glob_encoder.py  conv_module.py  dataset.py  executor.py  executor_wrapper.py  human_coach.py  inst_dict.py  instruction_encoder.py  instruction_generator.py  instruction_selector.py  match.py  match2.py  module.py  onehot_coach.py  reducer.py  rnn_coach.py  rnn_generator.py  set_path.py  train_coach.py  train_executor.py  utils.py
scripts/behavior_clone/scripts/: coach_bow250.sh  coach_bow50.sh  coach_bow500.sh  coach_onehot250.sh  coach_onehot50.sh  coach_onehot500.sh  coach_rnn250.sh  coach_rnn50.sh  coach_rnn500.sh  coach_rnn_gen250.sh  coach_rnn_gen50.sh  coach_rnn_gen500.sh  executor_bow.sh  executor_onehot.sh  executor_rnn.sh  executor_rnn_nohist.sh  executor_zero.sh
scripts/common_utils/: __init__.py  assert_utils.py  global_consts.py  helper.py  logger.py  multi_counter.py  optim.py  parser.py  result_stat.py
scripts/process_dataset/: README.md  common_utils  create_dataset.py  format_json.py  gen_state.py  play_replay.py  process_game.py  process_instruction.py  process_json.py  utils.py
tube/: CMakeLists.txt  README.md
tube/pytube/: __init__.py  data_channel_manager.py  test_dc_manager.py  utils.py
tube/src_cpp/: context.h  data_block.h  data_channel.cc  data_channel.h  dispatcher.h  env_thread.h  episodic_trajectory.h  fixed_len_trajectory.h  indefinite_trajectory.h  pybind.cc  utils.h
tube/src_cpp/test/: test_data_channel.cc  test_producer.h
visual/: .gitignore  README.md  gen_file_list.py  package.json
visual/src/: App.css  App.js  App.test.js  Grid.js  MapCanvas.js  Unit.js  Util.js  index.css  index.js  serviceWorker.js
